
### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

- #9074: reworded error message for non-regular structural types
  (Florian Angeletti, review by Jacques Garrigue and Leo White,
   report by Chas Emerick)

- #8938: Extend ocamlopt option "-stop-after" to handle "scheduling" argument.
  (Greta Yorsh, review by Florian Angeletti and Sébastien Hinderer)

### Internal/compiler-libs changes:

- #8970: separate value patterns (matching on values) from computation patterns
  (matching on the effects of a copmutation) in the typedtree.
  (Gabriel Scherer, review by Jacques Garrigue and Alain Frisch)

- #9078: make all compilerlibs/ available to ocamltest.
  (Gabriel Scherer, review by Sébastien Hinderer)

- #9079: typecore/parmatch: refactor ppat_of_type and refine
  the use of backtracking on wildcard patterns
  (Florian Angeletti, Jacques Garrigue, Gabriel Scherer,
   review by Thomas Refis)

### Build system:

### Bug fixes:

- #7683, #1499: Fixes one case where the evaluation order in native-code
  may not match the one in bytecode.
  (Nicolás Ojeda Bär, report by Pierre Chambart, review by Gabriel Scherer)

OCaml 4.10.0
------------

(Changes that can break existing programs are marked with a "*")

### Language features

- #7557, #1726: multi-indices for extended indexing operators
  (Florian Angeletti, review by Gabriel Radanne)

* #1859: --enable-force-safe-string is now the default. This can be
  overridden at configure time only (introduced by 4.04 in 2016).
  Unless --disable-force-safe-string is used at configure time, this
  breaks code that use the '-unsafe-string' argument and C stubs that
  use String_val as a char* instead of const char*
  (Kate Deplaix)

- #6662, #8908: Add "module _ = X" syntax
  (Thomas Refis, review by Gabriel Radanne)

- #8993: New C functions caml_process_pending_actions{,_exn} in
  caml/signals.h, intended for executing all pending actions inside